Merged in releases/1.10.0-rc (pull request #564)
Releases/1.10.0 rc

* Upgrade to Java 21

* Merge develop into 1.10.0,  Upgrade Dcm4che2

* Upgraded Gradle wrapper, plugins, conventions, etc.

* Upgraded Gradlew checksum

* dcm4che dependency maven issue

* Merge branch 'develop' into releases/1.10.0-rc


Approved-by: Will Horton (XW)
Approved-by: Bin Zhang